--- a/index.html
+++ b/index.html
@@ -1,28 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Epic House Party</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Wedding Celebration</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>The Epic House Party</h1>
-    <p>Saturday, February 10th - 8 PM</p>
-    <p>123 Party Lane, Cityville</p>
-  </header>
+    <!-- Main Container -->
+    <header class="hero-section">
+        <div class="container">
+            <h1>Join Us for Our Wedding Celebration</h1>
+            <p class="couple-names">Emily & James</p>
+            <p class="wedding-date">Saturday, June 12, 2025</p>
+            <a href="#details" class="btn-details">View Details</a>
+        </div>
+    </header>
 
-  <main>
-    <section>
-      <h2>Get Ready!</h2>
-      <p>Music, drinks, and good vibes. It's going to be an unforgettable night!</p>
-      <a href="mailto:party@hostemail.com">RSVP</a>
+    <!-- Wedding Details Section -->
+    <section id="details" class="details-section">
+        <div class="container">
+            <h2>Event Details</h2>
+            <div class="event-info">
+                <div class="location">
+                    <h3>Location</h3>
+                    <p>The Grand Ballroom, 123 Celebration Ave, Cityville</p>
+                </div>
+                <div class="time">
+                    <h3>Time</h3>
+                    <p>Ceremony: 3:00 PM<br>Reception: 6:00 PM</p>
+                </div>
+            </div>
+            <a href="#rsvp" class="btn-rsvp">RSVP Now</a>
+        </div>
     </section>
-  </main>
 
-  <footer>
-    <p>Follow us on social media! #EpicHouseParty</p>
-  </footer>
+    <!-- RSVP Section -->
+    <section id="rsvp" class="rsvp-section">
+        <div class="container">
+            <h2>RSVP</h2>
+            <form action="#" method="post" class="rsvp-form">
+                <label for="name">Your Name</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Your Email</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="attendance">Will You Attend?</label>
+                <select id="attendance" name="attendance">
+                    <option value="yes">Yes</option>
+                    <option value="no">No</option>
+                </select>
+
+                <button type="submit" class="btn-submit">Submit</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 Emily & James Wedding. All Rights Reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
