--- a/index.html
+++ b/index.html
@@ -3,66 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Wedding Celebration</title>
+    <title>11th Arrondissement House Party</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Main Container -->
-    <header class="hero-section">
-        <div class="container">
-            <h1>Join Us for Our Wedding Celebration</h1>
-            <p class="couple-names">Emily & James</p>
-            <p class="wedding-date">Saturday, June 12, 2025</p>
-            <a href="#details" class="btn-details">View Details</a>
-        </div>
+    <header>
+        <h1>11th Arrondissement House Party</h1>
+        <p>Where Creativity, Culture, and Chaos Meet</p>
     </header>
 
-    <!-- Wedding Details Section -->
-    <section id="details" class="details-section">
-        <div class="container">
-            <h2>Event Details</h2>
-            <div class="event-info">
-                <div class="location">
-                    <h3>Location</h3>
-                    <p>The Grand Ballroom, 123 Celebration Ave, Cityville</p>
-                </div>
-                <div class="time">
-                    <h3>Time</h3>
-                    <p>Ceremony: 3:00 PM<br>Reception: 6:00 PM</p>
-                </div>
-            </div>
-            <a href="#rsvp" class="btn-rsvp">RSVP Now</a>
+    <section class="intro">
+        <h2>Step Inside</h2>
+        <p>Welcome to a party that never stops—just like the 11th arrondissement. Expect a blend of art, music, food, and a touch of the unexpected.</p>
+    </section>
+
+    <section class="vibes">
+        <h2>The Vibes</h2>
+        <p>Expect everything from street art to indie concerts, vintage vinyl spins to intimate dance-offs. This is where the city's most creative minds gather.</p>
+        <div class="vibe-images">
+            <!-- Your image 'ray.jpg' is added here -->
+            <img src="ray.jpg" alt="Vibrant Parisian House Party" class="party-img">
+            <img src="street-art.jpg" alt="Street Art Vibe">
+            <img src="vintage-records.jpg" alt="Vintage Records Vibe">
+            <img src="indie-concert.jpg" alt="Indie Concert Vibe">
         </div>
     </section>
 
-    <!-- RSVP Section -->
-    <section id="rsvp" class="rsvp-section">
-        <div class="container">
-            <h2>RSVP</h2>
-            <form action="#" method="post" class="rsvp-form">
-                <label for="name">Your Name</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Your Email</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="attendance">Will You Attend?</label>
-                <select id="attendance" name="attendance">
-                    <option value="yes">Yes</option>
-                    <option value="no">No</option>
-                </select>
-
-                <button type="submit" class="btn-submit">Submit</button>
-            </form>
-        </div>
+    <section class="guests">
+        <h2>The Guests</h2>
+        <p>The guests? You name it. Bohemian creatives, trendsetters, and artists are always in attendance. There's a seat for everyone here.</p>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Emily & James Wedding. All Rights Reserved.</p>
-        </div>
+    <footer>
+        <p>Follow us on Instagram @11thArrParty</p>
     </footer>
 </body>
 </html>
