--- a/index.html
+++ b/index.html
@@ -8,35 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>11th Arrondissement House Party</h1>
-        <p>Where Creativity, Culture, and Chaos Meet</p>
-    </header>
-
-    <section class="intro">
-        <h2>Step Inside</h2>
-        <p>Welcome to a party that never stops—just like the 11th arrondissement. Expect a blend of art, music, food, and a touch of the unexpected.</p>
-    </section>
-
-    <section class="vibes">
-        <h2>The Vibes</h2>
-        <p>Expect everything from street art to indie concerts, vintage vinyl spins to intimate dance-offs. This is where the city's most creative minds gather.</p>
-        <div class="vibe-images">
-            <!-- Your image 'ray.jpg' is added here -->
-            <img src="ray.jpg" alt="Vibrant Parisian House Party" class="party-img">
-            <img src="street-art.jpg" alt="Street Art Vibe">
-            <img src="vintage-records.jpg" alt="Vintage Records Vibe">
-            <img src="indie-concert.jpg" alt="Indie Concert Vibe">
-        </div>
-    </section>
-
-    <section class="guests">
-        <h2>The Guests</h2>
-        <p>The guests? You name it. Bohemian creatives, trendsetters, and artists are always in attendance. There's a seat for everyone here.</p>
-    </section>
-
-    <footer>
-        <p>Follow us on Instagram @11thArrParty</p>
-    </footer>
-</body>
-</html>
+    <div class="content">
+        <h1>We're Throwing a Backyard Party!</h1>
+        <p>To celebrate our elopement/marriage/wedding/etc.</p>
+        <p>We'll start in the early afternoon and go all night. There will be food and booze. There will be music. It will be a great time.</p>
+        <p>We love you all very much for being part of our lives. Looking forward to more great memories together!</p>
+        <p>There will be no ceremony, no seated dinner, no registry
