--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>11th Arrondissement House Party</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Open+Sans:wght@400&display=swap" rel="stylesheet">
+    <title>Background Image Rotator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="background-container">
+        <img src="image1.jpg" alt="Background Image 1" class="active">
+        <img src="image2.jpg" alt="Background Image 2">
+        <img src="image3.jpg" alt="Background Image 3">
+        <img src="image4.jpg" alt="Background Image 4">
+    </div>
+
     <div class="content">
         <h1>We're Throwing a Backyard Party!</h1>
         <p>To celebrate our elopement/marriage/wedding/etc.</p>
@@ -16,5 +22,7 @@
         <p>There will be no ceremony, no seated dinner, no registry, no speeches (just kidding, I will obviously be giving one speech), and no formal attire.</p>
         <p><strong>May 24th, 2025</strong> at <strong>618 Woodlawn Ave, Venice</strong></p>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
