--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Background Image Rotator</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: 'Courier New', Courier, monospace; /* Set typewriter-style font */
+        }
+    </style>
 </head>
 <body>
     <div class="background-container">
