--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 </head>
 <body>
     <div class="background-container">
-        <img src="image1.jpg" alt="Background Image 1" class="active">
-        <img src="image2.jpg" alt="Background Image 2">
-        <img src="image3.jpg" alt="Background Image 3">
-        <img src="image4.jpg" alt="Background Image 4">
+        <img src="ray.jpg" alt="Background Image 1" class="active">
+        <img src="raheli.jpg" alt="Background Image 2">
+        <img src="both.jpg" alt="Background Image 3">
     </div>
 
     <div class="content">
