--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <div class="background-container">
-        <img src="ray.jpg" alt="Background Image 1" class="active">
-        <img src="raheli.jpg" alt="Background Image 2">
-        <img src="both.jpg" alt="Background Image 3">
+        <img src="ray.jpg" alt="Ray" class="active">
+        <img src="raheli.jpg" alt="Raheli">
+        <img src="both.jpg" alt="Both">
     </div>
 
     <div class="content">
