--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Background Image Rotator</title>
+    <title>Ray and Raheli's Backyard Wedding Bash</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Background container -->
     <div class="background-container">
         <img src="ray.jpg" alt="Ray" class="active">
         <img src="raheli.jpg" alt="Raheli">
         <img src="both.jpg" alt="Both">
     </div>
 
+    <!-- Content container -->
     <div class="content">
         <h1>We're Throwing a Backyard Party!</h1>
         <p>To celebrate our elopement/marriage/wedding/etc.</p>
