--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <!-- Content container -->
     <div class="content">
         <h1>We're Throwing a Backyard Party!</h1>
-        <p>To celebrate our elopement.</p>
-        <p>We'll start in the early afternoon and go all night. There will be food and booze. There will be music. It will be a great time.</p>
-        <p>We love you all very much for being part of our lives. Looking forward to more great memories together!</p>
-        <p>There will be no ceremony, no seated dinner, no registry, no speeches (just kidding, I will obviously be giving one speech), and no formal attire.</p>
-        <p><strong>May 24th, 2025</strong> at <strong>618 Woodlawn Ave, Venice</strong></p>
+        <p><strong>To celebrate our elopement.</strong></p>
+        <p><strong>We'll start in the early afternoon and go all night. There will be food and booze. There will be music. It will be a great time.</strong></p>
+        <p><strong>We love you all very much for being part of our lives. Looking forward to more great memories together!</strong></p>
+        <p><strong>There will be no ceremony, no seated dinner, no registry, no speeches (just kidding, I will obviously be giving one speech), and no formal attire.</strong></p>
+        <p><strong>May 24th, 2025 at 618 Woodlawn Ave, Venice</strong></p>
     </div>
 
     <script src="script.js"></script>
