--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <!-- Background container -->
     <div class="background-container">
-        <img src="ray.jpg" alt="Ray" class="active">
+        <img src="both.jpg" alt="Both" class="active">
         <img src="raheli.jpg" alt="Raheli">
-        <img src="both.jpg" alt="Both">
+        <img src="ray.jpg" alt="Ray">
     </div>
 
     <!-- Content container -->
@@ -20,7 +20,7 @@
         <p><strong>To celebrate our elopement.</strong></p>
         <p><strong>We'll start in the early afternoon and go all night. There will be food and booze. There will be music. It will be a great time.</strong></p>
         <p><strong>We love you all very much for being part of our lives. Looking forward to more great memories together!</strong></p>
-        <p><strong>There will be no ceremony, no seated dinner, no registry, no speeches (just kidding, I will obviously be giving one speech), and no formal attire.</strong></p>
+        <p><strong>There will be no ceremony, no seated dinner, no registry, no speeches (just kidding, Ray will obviously be giving one speech), and no formal attire.</strong></p>
         <p><strong>May 24th, 2025 at 618 Woodlawn Ave, Venice</strong></p>
     </div>
 
