--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
     <!-- Background container -->
     <div class="background-container">
         <img src="both.jpg" alt="Both" class="active">
+        <img src="soft.jpg" alt="Soft">
         <img src="raheli.jpg" alt="Raheli">
         <img src="ray.jpg" alt="Ray">
     </div>
 
     <!-- Content container -->
+    <!-- We will have ice cold light beer, an egregrious amount of natural wine, and some of our favorite cocktails. We will have a tasty snacks, a local taco stand catering, and plenty of other sustenance. We'll have tunes blasting from speakers all of There will be music. It will be a great time. -->
     <div class="content">
-        <h1>We're Throwing a Backyard Party!</h1>
-        <p><strong>To celebrate our elopement.</strong></p>
-        <p><strong>We'll start in the early afternoon and go all night. There will be food and booze. There will be music. It will be a great time.</strong></p>
-        <p><strong>We love you all very much for being part of our lives. Looking forward to more great memories together!</strong></p>
+        <h1>We're throwing a Backyard Wedding Bash!</h1>
+        <p><strong>After 9 short years together, we finally did it! As in, we eloped on February 4th (yes, on a Tuesday morning at 830am) using the Express Marriage Ceremony offered by the LA County Registrar-Recorder/County Clerk office at the LAX Courthouse. Romantic, we know.</strong></p> 
+        <p><strong>So now it's time to party in our backyard! We'll start in the afternoon (say 3pm) on Saturday May 24th and plan to party all night.</strong></p>
+        <p><strong>There will be food and booze and music. Specifics to come for those of you who love a detailed plan!</strong></p>
+        <p><strong>We appreciate you all so much for being part of our lives. Looking forward to more great memories together!</strong></p>
         <p><strong>There will be no ceremony, no seated dinner, no registry, no speeches (just kidding, Ray will obviously be giving one speech), and no formal attire.</strong></p>
-        <p><strong>May 24th, 2025 at 618 Woodlawn Ave, Venice</strong></p>
+        <p><strong>Our crib is at 618 Woodlawn Ave, Venice. Please text us to RSVP./strong></p>
     </div>
 
     <script src="script.js"></script>
