--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
     <!-- We will have ice cold light beer, an egregrious amount of natural wine, and some of our favorite cocktails. We will have a tasty snacks, a local taco stand catering, and plenty of other sustenance. We'll have tunes blasting from speakers all of There will be music. It will be a great time. -->
     <div class="content">
         <h1>We're throwing a Backyard Wedding Bash!</h1>
-        <p><strong>After 9 short years together, we finally did it! As in, we eloped on February 4th (yes, on a Tuesday morning at 830am) using the Express Marriage Ceremony offered by the LA County Registrar-Recorder/County Clerk office at the LAX Courthouse. Romantic, we know.</strong></p> 
-        <p><strong>So now it's time to party in our backyard! We'll start in the afternoon (say 3pm) on Saturday May 24th and plan to party all night.</strong></p>
-        <p><strong>There will be food and booze and music. Specifics to come for those of you who love a detailed plan!</strong></p>
-        <p><strong>We appreciate you all so much for being part of our lives. Looking forward to more great memories together!</strong></p>
-        <p><strong>There will be no ceremony, no seated dinner, no registry, no speeches (just kidding, Ray will obviously be giving one speech), and no formal attire.</strong></p>
-        <p><strong>Our crib is at 618 Woodlawn Ave, Venice. Please text us to RSVP./strong></p>
+        <p><strong>After 9 short years together, we finally eloped!</strong></p> 
+        <p><strong>So now it's time to fucking PARTY! May 24th at 618 Woodlawn Ave, Venice.</strong></p>
+        <p><strong>We'll start in the afternoon and plan to go all night.</strong></p>
+        <p><strong>What to expect: food, booze, music, great vibes, good times, and a sick cat named Potato Chip.</strong></p>
+        <p><strong>What not to expect: ceremony, seated dinner, registry, formal attire, and speeches.</strong></p>
+        <p><strong>Just kidding, Ray will be giving one speech, duh.</strong></p> 
+        <p><strong>We love you all SO much! Looking forward to many more great memories together!</strong></p>
+        <p><strong>Please text us to RSVP. And yes, we'll update this page with more details so check back as we get closer to the party.</strong></p>
     </div>
 
     <script src="script.js"></script>
