--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rayheli's Backyard Wedding Bash</title>
+    <!-- Google Fonts: Bebas Neue -->
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,7 +18,6 @@
     </div>
 
     <!-- Content container -->
-    <!-- We will have ice cold light beer, an egregrious amount of natural wine, and some of our favorite cocktails. We will have a tasty snacks, a local taco stand catering, and plenty of other sustenance. We'll have tunes blasting from speakers all of There will be music. It will be a great time. -->
     <div class="content">
         <h1>We're throwing a Backyard Wedding Bash!</h1>
         <p><strong>After 9 short years together, we finally eloped!</strong></p> 
