--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <!-- Background container -->
     <div class="background-container">
-        <img src="both.jpg" alt="Both" class="active">
+        <img src="hike.jpg" alt="Hike" class="active">
+        <img src="both.jpg" alt="Both">
         <img src="soft.jpg" alt="Soft">
         <img src="raheli.jpg" alt="Raheli">
         <img src="ray.jpg" alt="Ray">
