--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <!-- Background container -->
     <div class="background-container">
         <img src="hike.jpg" alt="Hike" class="active">
-        <img src="both.jpg" alt="Both">
     </div>
 
     <!-- Content container -->
     <div class="content">
-        <h1>We're throwing a Backyard Wedding Bash!</h1>
+        <h1>Backyard Wedding Bash</h1>
         <p><strong>After 9 short years together, we finally eloped!</strong></p> 
         <p><strong>So now it's time to fucking PARTY! May 24th at 618 Woodlawn Ave, Venice.</strong></p>
         <p><strong>We'll start in the afternoon and plan to go all night.</strong></p>
