--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 <body>
     <!-- Background container -->
     <div class="background-container">
-        <img src="hike.jpg" alt="Hike" class="active">
+        <img src="hike.jpg" alt="Hike" class="desktop-background active">
+        <img src="ibiza.jpg" alt="Ibiza" class="mobile-background">
     </div>
 
     <!-- Content container -->
     <div class="content">
         <h1>Backyard Wedding Bash</h1>
         <p><strong>After 9 short years together, we finally eloped!</strong></p> 
-        <p><strong>So now it's time to fucking PARTY! May 24th at 618 Woodlawn Ave, Venice.</strong></p>
+        <p><strong>So now it's time to party! May 24th at 618 Woodlawn Ave, Venice.</strong></p>
         <p><strong>We'll start in the afternoon and plan to go all night.</strong></p>
         <p><strong>What to expect: food, booze, music, great vibes, good times, and a sick cat named Potato Chip.</strong></p>
         <p><strong>What not to expect: ceremony, seated dinner, registry, formal attire, and speeches.</strong></p>
