--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rayheli's Backyard Wedding Bash</title>
-    <!-- Google Fonts: Bebas Neue -->
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,7 +17,7 @@
     <div class="content">
         <h1>Backyard Wedding Bash</h1>
         <p><strong>After 9 short years together, we finally eloped!</strong></p> 
-        <p><strong>So now it's time to party! May 24th at 618 Woodlawn Ave, Venice.</strong></p>
+        <p><strong>So now it's time to fucking PARTY! May 24th at 618 Woodlawn Ave, Venice.</strong></p>
         <p><strong>We'll start in the afternoon and plan to go all night.</strong></p>
         <p><strong>What to expect: food, booze, music, great vibes, good times, and a sick cat named Potato Chip.</strong></p>
         <p><strong>What not to expect: ceremony, seated dinner, registry, formal attire, and speeches.</strong></p>
