--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
     <!-- Content container -->
     <div class="content">
         <h1>Backyard Wedding Bash</h1>
-        <p><strong>After 9 short years together, we finally eloped!</strong></p> 
-        <p><strong>So now it's time to fucking PARTY! May 24th at 618 Woodlawn Ave, Venice.</strong></p>
-        <p><strong>We'll start in the afternoon and plan to go all night.</strong></p>
+        <p><strong>After 9 short years together, we finally eloped...and now it's time to party with our people!</strong></p> 
+        <p><strong>May 24th at 618 Woodlawn Ave, Venice. Starting sometime in the afternoon and going all night.</strong></p>
         <p><strong>What to expect: food, booze, music, great vibes, good times, and a sick cat named Potato Chip.</strong></p>
         <p><strong>What not to expect: ceremony, seated dinner, registry, formal attire, and speeches.</strong></p>
-        <p><strong>Just kidding, Ray will be giving one speech, duh.</strong></p> 
-        <p><strong>We love you all SO much! Looking forward to many more great memories together!</strong></p>
+        <p><strong>Just kidding, Ray will definitely be giving a speech, duh.</strong></p> 
+        <p><strong>We love you all SO much! Looking forward to making many more great memories together!</strong></p>
         <p><strong>Please text us to RSVP. And yes, we'll update this page with more details so check back as we get closer to the party.</strong></p>
     </div>
 
