--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     <div class="content">
         <h1>Backyard Wedding Bash</h1>
         <p><strong>After 9 short years together, we finally eloped...and now it's time to party with our people!</strong></p> 
-        <p><strong>May 24th at 618 Woodlawn Ave, Venice. Starting sometime in the afternoon and going all night.</strong></p>
-        <p><strong>What to expect: food, booze, music, great vibes, good times, and a sick cat named Potato Chip.</strong></p>
-        <p><strong>What not to expect: ceremony, seated dinner, registry, formal attire, and speeches.</strong></p>
-        <p><strong>Just kidding, Ray will definitely be giving a speech, duh.</strong></p> 
-        <p><strong>We love you all SO much! Looking forward to making many more great memories together!</strong></p>
-        <p><strong>Please text us to RSVP. And yes, we'll update this page with more details so check back as we get closer to the party.</strong></p>
+        <p><strong>May 24th at 618 Woodlawn Ave, Venice. The backyard will be open for business at 3pm and the party ends whenever we run out of booze.</strong></p>
+        <p><strong>We'll have light apps, a taco truck for dinner (5pm to 7pm), and a late night food drop as well. You won't go hungry.</strong></p>
+        <p><strong>We'll have bartenders slinging our favorite cocktails, natty wines, and light beers.</strong></p>
+        <p><strong>This will be a free flowing party without a particular schedule of events (no ceremony, no seated dinner, no speeches).</strong></p>
+        <p><strong>What to bring: Just good vibes! No gifts please.</strong></p>
+        <p><strong>Dress code: Garden Party Casual. Nothing too fancy, also reminder to bring a light jacket and comfortable shoes. </strong></p>
+        <p><strong>We love you all SO much! Looking forward to celebrating with you!</strong></p>
+        <p><strong>Please text us to RSVP.</strong></p>
     </div>
 
     <script src="script.js"></script>
