--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p><strong>What to bring: Just good vibes! No gifts please.</strong></p>
         <p><strong>Dress code: Garden Party Casual. Nothing too fancy, also reminder to bring a light jacket and comfortable shoes. </strong></p>
         <p><strong>We love you all SO much! Looking forward to celebrating with you!</strong></p>
-        <p><strong>Please text us to RSVP.</strong></p>
+        <p><strong>Please text us to RSVP. Are we doing anything Friday night or Sunday morning? Good question, we're figuring it out still.</strong></p>
     </div>
 
     <script src="script.js"></script>
