--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p><strong>We'll have light apps, a taco truck for dinner (5pm to 7pm), and a late night food drop as well. You won't go hungry.</strong></p>
         <p><strong>We'll have bartenders slinging our favorite cocktails, natty wines, and light beers.</strong></p>
         <p><strong>This will be a free flowing party without a particular schedule of events (no ceremony, no seated dinner, no speeches).</strong></p>
-        <p><strong>What to bring: Just good vibes! No gifts please.</strong></p>
+        <p><strong>What to bring: Just good vibes! No gifts please. Unfortunately, this time also no kids or pets.</strong></p>
         <p><strong>Dress code: Garden Party Casual. Nothing too fancy, also reminder to bring a light jacket and comfortable shoes. </strong></p>
         <p><strong>We love you all SO much! Looking forward to celebrating with you!</strong></p>
         <p><strong>Please text us to RSVP. Are we doing anything Friday night or Sunday morning? Good question, we're figuring it out still.</strong></p>
