--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <h1>Backyard Wedding Bash</h1>
         <p><strong>After 9 short years together, we finally eloped...and now it's time to party with our people!</strong></p> 
         <p><strong>May 24th at 618 Woodlawn Ave, Venice. The backyard will be open for business at 3pm and the party ends whenever we run out of booze.</strong></p>
-        <p><strong>We'll have light apps, a taco truck for dinner (5pm to 7pm), and a late night food drop as well. You won't go hungry.</strong></p>
-        <p><strong>We'll have bartenders slinging our favorite cocktails, natty wines, and light beers.</strong></p>
+        <p><strong>We'll have light apps, a taco truck for dinner (5pm to 730pm), and a late night food drop as well. You won't go hungry! </strong></p>
+        <p><strong>We'll have bartenders slinging our favorite cocktails plus plenty of natty wines and light beers to choose from.</strong></p>
         <p><strong>This will be a free flowing party without a particular schedule of events (no ceremony, no seated dinner, no speeches).</strong></p>
         <p><strong>What to bring: Just good vibes! No gifts please. Unfortunately, this time also no kids or pets.</strong></p>
-        <p><strong>Dress code: Garden Party Casual. Nothing too fancy, also reminder to bring a light jacket and comfortable shoes. </strong></p>
-        <p><strong>We love you all SO much! Looking forward to celebrating with you!</strong></p>
-        <p><strong>Please text us to RSVP. Are we doing anything Friday night or Sunday morning? Good question, we're figuring it out still.</strong></p>
+        <p><strong>Dress code: Garden Party Casual. Think dressy but not fancy (suits/ties/heels are not required)! Reminder to bring a light jacket (for the evening) and comfortable shoes (since we'll be mostly standing outside). </strong></p>
+        <p><strong>We love you all SO much! Looking forward to celebrating with you! Please text us to RSVP.</strong></p>
+        <p><strong>For anyone who wants to join for some additional hangouts (whether you're from out of town or local), we're sending out Partifuls for Friday evening welcome drinks at a to be determined Venice watering hole and a Sunday brunch hosted in a neighbor's backyard down the street from our place.</strong></p>
     </div>
 
     <script src="script.js"></script>
