--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p><strong>May 24th at 618 Woodlawn Ave, Venice. The backyard will be open for business at 3pm and the party ends whenever we run out of booze.</strong></p>
         <p><strong>We'll have light apps, a taco truck for dinner (5pm to 730pm), and a late night food drop as well. You won't go hungry! </strong></p>
         <p><strong>We'll have bartenders slinging our favorite cocktails plus plenty of natty wines and light beers to choose from.</strong></p>
-        <p><strong>This will be a free flowing party without a particular schedule of events (no ceremony, no seated dinner, no speeches).</strong></p>
+        <p><strong>This will be a free flowing party without a particular schedule of events (no ceremony, no seated dinner, no speeches)- a la come late, leave anytime, no stress!</strong></p>
         <p><strong>What to bring: Just good vibes! No gifts please. Unfortunately, this time also no kids or pets.</strong></p>
         <p><strong>Dress code: Garden Party Casual. Think dressy but not fancy (suits/ties/heels are not required)! Reminder to bring a light jacket (for the evening) and comfortable shoes (since we'll be mostly standing outside). </strong></p>
         <p><strong>We love you all SO much! Looking forward to celebrating with you! Please text us to RSVP.</strong></p>
