--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
         <p><strong>What to bring: Just good vibes! No gifts please. Unfortunately, this time also no kids or pets.</strong></p>
         <p><strong>Dress code: Garden Party Casual. Think dressy but not fancy (suits/ties/heels are not required)! Reminder to bring a light jacket (for the evening) and comfortable shoes (since we'll be mostly standing outside). </strong></p>
         <p><strong>We love you all SO much! Looking forward to celebrating with you! Please text us to RSVP.</strong></p>
-        <p><strong>For anyone who wants to join for some additional hangouts (whether you're from out of town or local), we're sending out Partifuls for 
-<a href="https://partiful.com/e/qlmIJ1HWH30niSRCEByU" target="_blank">Friday evening welcome drinks at a to be determined Venice watering hole</a> 
-and a <a href="https://partiful.com/e/4Y2xy6l52Gy7jQLxTw8c" target="_blank">Sunday brunch hosted in a neighbor's backyard down the street from our place</a>.
-</strong></p>
+        <p><strong>For anyone who wants to join for some additional hangouts (whether you're from out of town or local), we're sending out Partifuls for <a href="https://partiful.com/e/qlmIJ1HWH30niSRCEByU" target="_blank">Friday evening welcome drinks</a> at a to be determined Venice watering hole and a <a href="https://partiful.com/e/4Y2xy6l52Gy7jQLxTw8c" target="_blank">Sunday brunch</a> hosted in a neighbor's backyard down the street from our place.</strong></p>
     </div>
 
     <script src="script.js"></script>
